<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ca2e55"
    tools:context=".views.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="209dp"
        android:layout_height="124dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        app:layout_constraintTop_toBottomOf="@+id/logo">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:background="#ca2e55"
            app:tabSelectedTextColor="#f7fff2"
            app:tabIndicatorColor="#f7fff2"
            app:tabTextColor="#f7fff2"
            app:tabIconTint="#f7fff2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/timer"
                android:text="@string/timer" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/reward"
                android:text="@string/rewards" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/helpButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/helpButton"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help"
        app:tint="#f7fff2" />
    <FrameLayout
        android:id="@+id/popupNameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A8000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:elevation="8dp">

        <LinearLayout
            android:id="@+id/popupLayout"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/toast_border"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/viewPager"
            app:layout_constraintEnd_toEndOf="@+id/viewPager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/nameRequest"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/enterName"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/enterName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/popupText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#f7fff2"
                android:textColorHint="#f7fff2"
                android:textColorLink="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="italic"
                android:typeface="normal" />

            <Button
                android:id="@+id/nameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#A1C349"
                android:text="@string/letsGo"
                android:textColor="#F7FFF2"
                android:textSize="18sp"
                app:iconTint="#0A1C34"
                app:layout_constraintBottom_toBottomOf="@+id/timeContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerCodeText" />


        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
