<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="210dp"
    android:paddingLeft="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    tools:context=".views.TimerFragment">
    
    <TextView
        android:id="@+id/timeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:background="@drawable/layout_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:background="@drawable/points_box"
        android:contentDescription="@string/pointsholdertimer"
        app:layout_constraintEnd_toEndOf="@+id/timeContainer"
        app:layout_constraintStart_toStartOf="@+id/timeContainer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointsTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pointsTimer"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/pointsLabelTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointsTextTimer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/pointsTimer" />

    <EditText
        android:id="@+id/timerCodeText"
        android:layout_width="269dp"
        android:layout_height="63dp"
        android:background="@drawable/text_border"
        android:hint="@string/startText"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|number"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#161F00"
        android:textColorHint="#161F00"
        android:textColorLink="#F7FFF2"
        android:textSize="68sp"
        app:layout_constraintBottom_toTopOf="@+id/timerCodeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTimer" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:backgroundTint="#A1C349"
        android:text="@string/start"
        android:textColor="#F7FFF2"
        app:iconTint="#0A1C34"
        app:layout_constraintBottom_toBottomOf="@+id/timeContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerCodeText" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="268dp"
        android:layout_height="66dp"
        android:backgroundTint="#87a330"
        android:text="@string/stop"
        android:textColor="#F7FFF2"
        android:visibility="invisible"
        app:iconTint="#0A1C34"
        app:layout_constraintBottom_toBottomOf="@+id/timeContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerCodeText" />

    <TextView
        android:id="@+id/nameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="#161F00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>